add book listing with the possibility to delete the booings to booking page

--- a/FreeCodeCamp_crash_course/Django_Crash_Course/restaurant/templates/restaurant/book.html
+++ b/FreeCodeCamp_crash_course/Django_Crash_Course/restaurant/templates/restaurant/book.html
@@ -28,6 +28,19 @@
       </div>
       <!--End col-->
     </div>
+    <div class="column">
+      {% for book in books %}
+        <p>
+          {{book.first_name}} {{book.last_name}} {{book.guest_number}} {{book.comment}}
+          <form action="{% url 'book_detail' book.pk %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="_method" value="DELETE">
+          <button type="submit" class="delete-btn">Delete</button>
+          </form>
+        </p>
+      {% endfor %}
+
+    </div>
     <!--End row-->
 
 
