--- a/Online_Marketplace/OnlineMarket/core/templates/_partials/footer.html
+++ b/Online_Marketplace/OnlineMarket/core/templates/_partials/footer.html
@@ -8,7 +8,7 @@
       <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
       <ul class="space-y-2">
         <li><a href="#" class="text-lg text-teal-500 hover:text-tea-700">About</a></li>
-        <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-tea-700">Contact</a></li>
+        <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-tea-700">Contact</a></li>
         <li><a href="#" class="text-lg text-teal-500 hover:text-tea-700">privacy polict</a></li>
         <li><a href="#" class="text-lg text-teal-500 hover:text-tea-700">Term of use</a></li>
       </ul>
