--- a/Online_Marketplace/OnlineMarket/core/templates/_partials/header.html
+++ b/Online_Marketplace/OnlineMarket/core/templates/_partials/header.html
@@ -5,18 +5,20 @@
       <a href="{% url 'item:item_new' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
       <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
       {% if request.user.is_authenticated %}
-      <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
-      <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
-      <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">
-        {% if user.is_authenticated %}
-          {{ user.username }}!
-        {% else %}
-          Hello, guest!
-        {% endif %}
-      </a>
-        {% else %}
+        <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+        <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
+        <form action="{% url 'core:logout' %}" method="post" style="display:inline;">
+          {% csrf_token %}
+          <button type="submit" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">
+            {{ user.username }}!
+          </button>
+        </form>
+      {% else %}
         <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
         <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Sign in</a>
+        <div class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700 inline">
+          Hello, guest!
+        </div>
       {% endif %}
     </div>
   </nav>
