--- a/Online_Marketplace/OnlineMarket/item/templates/item/detail.html
+++ b/Online_Marketplace/OnlineMarket/item/templates/item/detail.html
@@ -24,7 +24,10 @@
       {% endif%}
 
       {% if request.user == item.created_by %}
-        <div class="mt-6 p-6 bg-white rounded-xl"><a href="{% url 'item:delete' pk=item.pk %}" class="inline-block mt6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a></div>
+        <div class="mt-6 p-6 bg-white rounded-xl">
+          <a href="{% url 'item:edit' pk=item.pk %}" class="inline-block mt6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl">Edit</a>
+          <a href="{% url 'item:delete' pk=item.pk %}" class="inline-block mt6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a>
+        </div>
       {% else %}
         <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white hover:bg-teal-400 rounded-xl">Contact Seller</a>
       {% endif %}
