--- a/Online_Marketplace/OnlineMarket/core/templates/_partials/header.html
+++ b/Online_Marketplace/OnlineMarket/core/templates/_partials/header.html
@@ -1,11 +1,11 @@
 {% block content %}
   <nav class="px-6 py-6 flex justify-between intems-center border-b border-gray-200">
-    <a href="/" cleass="text-xl font-semibold">Online MarketPlace</a>
+    <a href="/" class="text-xl font-semibold">Online MarketPlace</a>
     <div class="space-x-6">
       <a href="{% url 'item:item_new' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
       <a href="{% url 'item:items' %}" class="text-lg font-semibold hover:text-gray-500">Browse</a>
       {% if request.user.is_authenticated %}
-        <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+        <a href="{% url 'conversation:inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
         <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
         <form action="{% url 'core:logout' %}" method="post" style="display:inline;">
           {% csrf_token %}
